@@ -4,6 +4,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -12,6 +13,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -22,14 +24,32 @@ public class SecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Enable CORS
                 .csrf(csrf -> csrf.disable()) // Disable CSRF for APIs
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Stateless sessions
                 .authorizeHttpRequests(authz -> authz
-                        .requestMatchers("/api/**").permitAll() // Allow all API endpoints
-                        .requestMatchers("/h2-console/**").permitAll() // Allow H2 console
-                        .requestMatchers("/actuator/**").permitAll() // Allow actuator endpoints
-                        .anyRequest().authenticated() // Require auth for everything else
+                        // Public endpoints - authentication/registration
+                        .requestMatchers("/api/auth/**").permitAll()
+                        
+                        // Public endpoints - general API access
+                        .requestMatchers("/api/events/public/**").permitAll()
+                        .requestMatchers("/api/organizations/public/**").permitAll()
+                        .requestMatchers("/api/search/**").permitAll()
+                        
+                        // Development endpoints
+                        .requestMatchers("/h2-console/**").permitAll()
+                        .requestMatchers("/actuator/**").permitAll()
+                        
+                        // OPTIONS requests (CORS preflight)
+                        .requestMatchers("OPTIONS", "/**").permitAll()
+                        
+                        // All other API endpoints require authentication
+                        .requestMatchers("/api/**").authenticated()
+                        
+                        // Default - require authentication
+                        .anyRequest().authenticated()
                 )
                 .headers(headers -> headers
                         .frameOptions().sameOrigin() // Allow H2 console frames
+                        .httpStrictTransportSecurity(hstsConfig -> hstsConfig.disable()) // Disable HSTS for development
                 );
 
         return http.build();
@@ -39,24 +59,36 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow requests from React development servers
+        // Allow requests from React development servers and common ports
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "http://127.0.0.1:*",
+                "https://localhost:*",
+                "https://127.0.0.1:*"
+        ));
+
+        // Specific origins for safety
         configuration.setAllowedOrigins(Arrays.asList(
                 "http://localhost:3000",
-                "http://localhost:5173"));
+                "http://localhost:5173",
+                "http://localhost:8080",
+                "http://127.0.0.1:3000",
+                "http://127.0.0.1:5173"
+        ));
 
-        // Allow common HTTP methods
+        // Allow all HTTP methods
         configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
 
-        // Allow common headers
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Content-Type", "Authorization", "X-Requested-With"));
+        // Allow all headers
+        configuration.setAllowedHeaders(List.of("*"));
 
         // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
 
+        // Apply to all paths
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/**", configuration);
 
         return source;
     }
@@ -65,9 +97,4 @@ public class SecurityConfig {
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-
-//     @Bean
-//     public JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint() {
-//         return new JwtAuthenticationEntryPoint();
-//     }
 }
